[package]
name = "sidevm-quickjs"
version = "1.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
hyper = { version = "0.14", features = ["client", "http1"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
qjs-sys = { path = "qjs-sys" }
bootcode = { path = "bootcode" }
sidevm = "0.1.10"
log = "0.4"
anyhow = "1.0"
scopeguard = "1.2.0"

# Crates for native testing
tracing-subscriber = { version = "0.3", optional = true }
rand = { version = "0.8.5", optional = true }
hyper-rustls = { version = "0.24.1", optional = true }

[features]
default = ["native"]

stream = []
blob = []

native = [
    "tokio/full",
    "tracing-subscriber",
    "rand",
    "hyper/runtime",
    "hyper/tcp",
    "hyper-rustls/webpki-roots",
]
sanitize-address = ["qjs-sys/sanitize-address"]
