[package]
name = "sidevm-quickjs"
version = "1.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
qjs = { package = "qjsbind", path = "qjs-sys/qjsbind" }
tokio = { version = "1", features = ["sync", "macros", "io-util"] }
hyper = { version = "0.14", features = ["client", "http1"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
bootcode = { path = "bootcode" }
sidevm = "0.2.0-alpha.1"
log = "0.4"
anyhow = "1.0"
scopeguard = "1.2.0"
url = "2.4.0"

# Crates for native testing
tracing-subscriber = { version = "0.3", optional = true }
rand = { version = "0.8.5", optional = true }
hyper-rustls = { version = "0.24.1", optional = true }

[features]
default = ["native"]
sanitize-address = ["qjs/sanitize-address"]

stream = []
blob = []

native = [
    "tokio/full",
    "tracing-subscriber",
    "rand",
    "hyper/runtime",
    "hyper/tcp",
    "hyper-rustls/webpki-roots",
]
