[package]
name = "qjs"
version = "1.2.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[profile.release]
debug-assertions = false
overflow-checks = false

[dependencies]
ink = { version = "4", default-features = false, features = ["static-buffer-1M256K"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
qjsbind = { path = "qjs-sys/qjsbind", default-features = false }
qjs-extensions = { path = "qjs-sys/qjs-extensions", default-features = false, features = ["base64", "hex"] }
pink = { package = "pink-extension", version = "0.4.4-dev.2", default-features = false, features = ["dlmalloc"] }
bootcode = { path = "bootcode" }

[lib]
name = "qjs"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    "pink/std",
    "qjsbind/std",
    "qjs-extensions/std",
]
ink-as-dependency = []

[patch.crates-io]
ink = { git = "https://github.com/kvinwang/ink.git", branch = "config-buffer" }
