[package]
name = "wapo-quickjs"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[profile.release]
lto = true

[[bin]]
name = "wapojs"
path = "src/wapojs.rs"

[dependencies]
js = { package = "qjsbind", path = "../qjs-sys/qjsbind" }
qjs-extensions = { path = "../qjs-sys/qjs-extensions", features = ['std'] }
tokio = { version = "1", features = ["sync", "macros", "io-util"] }
hyper = { version = "0.14", features = ["client", "http1"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
bootcode = { path = "bootcode" }
wapo = { git = "https://github.com/Phala-Network/wapo" }
log = "0.4"
anyhow = "1.0"
url = "2.4.0"
scale = { package = "parity-scale-codec", version = "3" }
hex = "0.4.3"
pink-types = "0.1"

sha2 = { version = "0.10", optional = true, default-features = false }
sha3 = { version = "0.10", optional = true, default-features = false }
blake2 = { version = "0.10", optional = true, default-features = false }

phala-allocator = { version = "0.1.0", optional = true }

# Crates for native testing
tracing-subscriber = { version = "0.3", optional = true }
rand = { version = "0.8.5", optional = true }
hyper-rustls = { version = "0.24.1", optional = true }
bytes = "1.6.0"

[dependencies.web-sys]
version = "0.3.4"
optional = true
features = ['console']

[features]
default = ["wapo", "js-url", "js-http-listen", "js-hash", "js-crypto"]
sanitize-address = ["js/sanitize-address"]
js-url = []
js-http-listen = []
js-hash = ["sha2", "sha3", "blake2"]
js-crypto = [
    "qjs-extensions/crypto",
]
wapo = []
mem-stats = ["phala-allocator", "js/pink-allocator"]

native = [
  "tokio/full",
  "tracing-subscriber",
  "rand",
  "hyper/runtime",
  "hyper/tcp",
  "hyper-rustls/webpki-roots",
]
