[package]
name = "phat_js"
version = "0.2.3"
edition = "2021"
description = "Provide a function to call the JSDelegate in a phat contract cluster"
license = "MIT"
repository = "https://github.com/Phala-Network/phala-blockchain"

[lib]
name = "phat_js"
path = "lib.rs"

[dependencies]
ink = { version = "4.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

pink = { package = "pink-extension", version = "0.5", default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink/std",
]
