[package]
name = "pink_quickjs"
version = "2.0.1"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[profile.release]
debug-assertions = false
overflow-checks = false

[dependencies]
ink = { version = "4.3", default-features = false, features = ["static-buffer-1M256K"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
qjsbind = { path = "../qjs-sys/qjsbind", default-features = false }
qjs-extensions = { path = "../qjs-sys/qjs-extensions", default-features = false, features = ["base64", "hex", "scale2"] }
pink = { version = "0.4.0", default-features = false, features = ["dlmalloc"] }
bootcode = { path = "bootcode" }
phat_js = { path = "../phat_js", default-features = false }
this-crate = "0.1"
anyhow = { version = "1.0.86", default-features = false }

[lib]
name = "pink_quickjs"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink/std",
    "qjsbind/std",
    "qjs-extensions/std",
    "phat_js/std",
    "anyhow/std",
]
ink-as-dependency = []

[patch.crates-io]
ink = { git = "https://github.com/kvinwang/ink.git", branch = "config-buffer-4.3.0" }
