[package]
name = "wapojs-run"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1.0.69"
clap = { version = "4.0.32", features = ["derive"] }
rocket = "0.5.0"
parse-size = "1.0.0"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
hex_fmt = "0.3.0"
dirs = "5.0.1"

[dependencies.wapod]
git = "https://github.com/Phala-Network/wapo.git"
