[package]
name = "play"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false, features = ["static-buffer-512K"] }
pink = { package = "pink-extension", version = "0.5.1", default-features = false, features = ["dlmalloc"] }
phat_js = { version = "0.2.8", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "phat_js/std",
    "pink/std",
]
ink-as-dependency = []
e2e-tests = []

[patch.crates-io]
ink = { git = "https://github.com/kvinwang/ink.git", branch = "config-buffer-4.3.0" }