[package]
name = "control"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
pink = { package = "pink-extension", version = "0.5.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
phat_js = { version = "0.2.5", default-features = false }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink/std",
    "phat_js/std",
]
ink-as-dependency = []
e2e-tests = []
